<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp">

    <TextView
        android:id="@+id/hcd_disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfregular"
        android:text="@string/disconnect"
        android:textColor="@color/redWrong"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hcd_services_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hcd_services_prompt" />

    <TextView
        android:id="@+id/hcd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hcd_disconnect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/hcd_name_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hcd_name_prompt"
        tools:text="PLAYBULB CANDLE" />

    <TextView
        android:id="@+id/hcd_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hcd_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hcd_disconnect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/hcd_address_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hcd_address_prompt"
        tools:text="65:12:36:FS:A9:55" />

    <TextView
        android:id="@+id/hcd_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hcd_address"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hcd_disconnect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textSize="@dimen/regular_text_size"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@+id/hcd_services_prompt"
        app:layout_constraintStart_toEndOf="@+id/hcd_services_prompt"
        tools:text="1 Servicio" />

    <TextView
        android:id="@+id/hcd_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/name_prompt"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nombre:" />

    <TextView
        android:id="@+id/hcd_address_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/address_prompt"
        android:textSize="@dimen/regular_text_size"
        android:textColor="@color/primaryText"
        app:layout_constraintStart_toStartOf="@+id/hcd_name_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hcd_name_prompt" />


    <TextView
        android:id="@+id/hcd_services_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/services_prompt"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="@+id/hcd_address_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hcd_address_prompt" />

    <View
        android:id="@+id/hcd_line"
        android:layout_width="250dp"
        android:layout_height="0.5dp"
        android:background="@color/dividersLinesColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>