<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp">

    <TextView
        android:id="@+id/hsd_connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_button_primary"
        android:fontFamily="@font/sfmedium"
        android:paddingBottom="2dp"
        android:paddingEnd="@dimen/double_padding"
        android:paddingStart="@dimen/double_padding"
        android:paddingTop="2dp"
        android:text="@string/connect"
        android:textColor="#ffffff"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hsd_power_signal_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hsd_power_signal_prompt" />

    <TextView
        android:id="@+id/hsd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hsd_connect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/hsd_name_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hsd_name_prompt"
        tools:text="PLAYBULB CANDLE" />

    <TextView
        android:id="@+id/hsd_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hcd_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hsd_connect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/hsd_address_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hsd_address_prompt"
        tools:text="65:12:36:FS:A9:55" />

    <TextView
        android:id="@+id/hsd_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hsd_address"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hsd_connect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textSize="@dimen/regular_text_size"
        android:textColor="@color/primaryText"
        android:visibility="visible"
        tools:text="1 Servicio Disponible"
        app:layout_constraintBottom_toBottomOf="@+id/hsd_services_prompt"
        app:layout_constraintStart_toEndOf="@+id/hsd_services_prompt" />

    <TextView
        android:id="@+id/hsd_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hsd_services"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/hsd_connect_button"
        android:ellipsize="end"
        android:fontFamily="@font/sflight"
        android:maxLines="1"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/hsd_power_signal_prompt"
        app:layout_constraintEnd_toStartOf="@+id/hsd_connect_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hsd_power_signal_prompt"
        tools:text=" 68 dBm" />


    <View
        android:id="@+id/hsd_line"
        android:layout_width="250dp"
        android:layout_height="0.5dp"
        android:layout_below="@id/hsd_rssi"
        android:background="@color/dividersLinesColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hsd_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/name_prompt"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nombre:" />

    <TextView
        android:id="@+id/hsd_address_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/address_prompt"
        android:textSize="@dimen/regular_text_size"
        android:textColor="@color/primaryText"
        app:layout_constraintStart_toStartOf="@+id/hsd_name_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hsd_name_prompt" />

    <TextView
        android:id="@+id/hsd_power_signal_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/power_signal_prompt"
        android:textSize="@dimen/regular_text_size"
        android:textColor="@color/primaryText"
        app:layout_constraintStart_toStartOf="@+id/hsd_services_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hsd_services_prompt" />

    <TextView
        android:id="@+id/hsd_services_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/regular_text_size"
        android:fontFamily="@font/sfbold"
        android:text="@string/services_prompt"
        android:textColor="@color/primaryText"
        app:layout_constraintStart_toStartOf="@+id/hsd_address_prompt"
        app:layout_constraintTop_toBottomOf="@+id/hsd_address_prompt" />

</android.support.constraint.ConstraintLayout>